# llm-api-access

./: .gitignore  README.md  README_EN.md  api_adaptor.py  api_keys.py  arguments.py  config.yaml  data_processor.py  gpt_runner.py  main.py  prompt_generator.py  pyproject.toml  run.sh  runner_processor.py  utils.py
config/: config.yaml
examples/: main.py  run.sh
examples/config/: config.yaml
llm_api_access/: __init__.py  api_adaptor.py  api_keys.py  arguments.py  base_wrapper.py  llm_requester.py  llm_runner.py  utils.py  wrapper.py
