[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_api_access"]
exclude = ["examples"]

[project]
name = "llm-api-access"
authors = [
    {name = "tongxiao2002", email = "tongxiao2002@mail.ustc.edu.cn"}
]
description = "A simple and easy-to-use package for accessing LLMs with API."
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "requests",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Repository = "https://github.com/tongxiao2002/llm-api-access"
